Revision history for Plasp

{{$NEXT}}
1.08    Fri Jul 2 16:04:45 2021 -0400
        - Fix stack trace in application error
        - Keep stack trace of original error encountered, storing in exception
        - Make more friendly by filtering out ^Plasp:: and ^Plack packages
1.07    Wed May 26 16:22:05 2021 -0400
        - Fix incorrect handling of Hash::MultiValue fields
        - When field was converted to Hash::MultiValue, the supporting function
          was not properly updated
1.06    Tue May 18 21:46:10 2021 -0700
        - Don't encode all HTML entities
        - Apache::ASP only did <>&'"
1.05    Tue May 4 11:18:10 2021 -0400
        - Fix %ENV values leakage!
1.04    Mon Apr 12 12:33:13 2021 -0400
        - Fix error condition when code compilation fails
        - Throw exception on code compilation error
        - Ensure cleanup in other areas, and memoize cleanup
1.03    Tue Sep 22 11:08:24 2020 -0400
        - Don't redefine $Response->Flush
        - Instead, use local variables to "trap" output
        - Carelessly forgot /etc/magic in File::LibMagic
1.02    Sat Sep 19 00:20:14 2020 -0400
        - Don't explicitly specify magic file, since not location in BSD
        - Test requires HTTP::Cookies >= 6.03
1.01    Fri Sep 18 10:19:06 2020 -0400
        - Explicitly declare dependency versions
        - Clean up documentation
        - Make $Server->Transfer do as advertised
        - Remove unnecessary Moo in tests
        - Perl::Tidy'd and Perl::Critic'd
1.00    Wed Sep 16 17:11:25 2020 -0400
        - Bold 1.00 initial release!