@@ -102,7 +102,7 @@
          "web" : "https://github.com/stvleung/Plasp"
       }
    },
-   "version" : "1.08",
+   "version" : "1.09",
    "x_contributors" : [
       "Steven Leung <sleung@turnitin.com>"
    ],
